# ipfs-client-rs

./: .travis.yml  Cargo.toml  README.md
examples/: version.rs
src/: client.rs  data.rs  deserialize_helpers.rs  errors.rs  fetch.rs  future.rs  lib.rs  version.rs  wrap.rs
