[package]
name = "ipfs-client"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[dependencies]
curl = "*"
error-chain = "*"
futures = "*"
serde_json = "*"
tokio-core = "*"
# Bug with zero-length timeouts fixed in master (triggered by delay with Little
# Snitch allowing the network connection)
tokio-curl = { git = "https://github.com/tokio-rs/tokio-curl" }
